fix(ontology): 加固实体类型领域规则与命名空间保护